--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
-    <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"/>
-    <title>Поисковик аккаунтов на GitHub</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Raleway:wght@100&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <title>GitHub Search API</title>
   </head>
   <body>
     <noscript>Включите JavaScript для работы приложения</noscript>
